--- a/scroll-snap/index.html
+++ b/scroll-snap/index.html
@@ -5,15 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scroll Snap</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- <script src="./scripts.js"></script> -->
-
   </head>
   <body>
-    <header id="header" class="hero scrollable">
+    <header id="header" class="hero" data-scroll-snapping>
       <h1>Scroll Snap Animation</h1>
       <div>&darr;</div>
     </header>
-    <section id="design" class="scrollable">
+    <section id="design" data-scroll-snapping>
       <header>
         <h2>Design</h2>
       </header>
@@ -22,7 +20,7 @@
         <figCaption>Design</figCaption>
       </figure>
     </section>
-    <section id="architecture" class="scrollable">
+    <section id="architecture" data-scroll-snapping>
       <header>
         <h2>Architechture</h2>
       </header>
@@ -31,7 +29,7 @@
         <figCaption>Architecture</figCaption>
       </figure>
     </section>
-    <section id="development" class="scrollable">
+    <section id="development" data-scroll-snapping>
       <header>
         <h2>Development</h2>
       </header>
@@ -40,9 +38,10 @@
         <figCaption>Development</figCaption>
       </figure>
     </section>
-    <footer id="footer" class="scrollable">
+    <footer id="footer" data-scroll-snapping>
       <p>Scroll up</p>
       <div>&uarr;</div>
     </footer>
+    <script src="./scripts.js"></script>
   </body>
 </html>
